<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PotansiyelHesap">

    <TextView
        android:id="@+id/PotansiyelBaslik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/potbaslik"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/kutlegiri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="96dp"
        android:ems="10"
        android:inputType="number|numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PotansiyelBaslik" />

    <TextView
        android:id="@+id/kutlemetin"
        android:layout_width="235dp"
        android:layout_height="36dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/kutle"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/kutlegiri"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sonuclabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginTop="508dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/sonuc"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PotansiyelBaslik" />

    <TextView
        android:id="@+id/ciktilabel"
        android:layout_width="264dp"
        android:layout_height="57dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="32dp"
        android:foregroundGravity="center_vertical|clip_horizontal|center"
        android:gravity="center"
        android:text="@string/uyari"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sonuclabel" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginTop="504dp"
        android:text="@string/hesapla"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/yercekimimetin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="388dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/yercekimi"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/yercekimigiri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="number|numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yercekimimetin" />

    <EditText
        android:id="@+id/yukseklikgiri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="288dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/yukseklikmetin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/yukseklik"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/yukseklikgiri"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>